--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -8,7 +8,7 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  translate: -50% -50%;
 }
 
 .heart {
